<resources>
    <string name="app_name">Pill Project</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab1">Pill</string>
    <string name="title_activity_tab2">Enter</string>
    <string name="title_activity_tab3">Track</string>

    <string name="intro">Place the fiber gummy in the time slot you like</string>

    <string name="option_1">Fiber gummy</string>
    <string name="option_2">Acetaminophen</string>
    <string name="option_3">Ibupropfen</string>

    <string name="choice_1">8 am</string>
    <string name="choice_2">10 am</string>
    <string name="choice_3">12 pm</string>

    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="title_activity_clock">Clock</string>


    <string-array name="months_array">
        <item>Pick month</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days_array">
        <item>Pick day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>



</resources>
